# filemanager

./: CMakeLists.txt
desktop/: desktopview.cpp
dialogs/: filepropertiesdialog.cpp
draganddrop/: declarativemimedata.cpp
helper/: datehelper.cpp
model/: dirlister.cpp  dirlister.h  foldermodel.cpp  foldermodel.h
